2004-11-24  Benoît Dejean  <tazforever@dlfp.org>

	* src/favorites.c: (add_single_to_blacklist):
	* src/prettytable.c: (new_application):
	* src/proctable.c: (proctable_free_info), (get_process_status),
	(find_parent), (insert_info_to_tree), (remove_children_from_tree),
	(remove_info_from_tree), (update_info), (get_info), (refresh_list),
	(proctable_search_table):
	* src/procman.h: ProcInfo is a bit smaller (on my ppc32 160B -> 128B).
	Renamed some members and added bitfield.
	Removed .parent_pid as we already have it though self->parent->pid.
	The .status string is now shared (no need to allocate/free anymore).
	
	(let say we have 200 running process, we've saved 30B * 200 = 6KB, wow !)

2004-11-22  Benoît Dejean  <tazforever@dlfp.org>

	* src/proctable.c: (sort_ints): Fixed stupid typo. CPU and RES columns
	are now correctly sorted.

2004-11-21  Benoît Dejean  <tazforever@dlfp.org>

	* src/gnome-system-monitor.schemas:
	* src/procman.c: (color_changed_cb), (procman_data_new): Changed default
	colors. Closes #129886.
	+ 1-line cleanup.

2004-11-20  Benoît Dejean  <tazforever@dlfp.org>

	* src/proctable.c: (proctable_new):
	* src/proctable.h: Re-ordered columns so that 'Arguments' is the last.
	This is a little workaround as long as columns are not re-orderable.
	See #125857.

2004-11-13  Benoît Dejean  <tazforever@dlfp.org>

	* configure.in:
	* src/Makefile.am:
	* src/procman.h:
	* src/proctable.c: (can_show_security_context_column),
	(get_selinux_context), (proctable_new), (proctable_free_info),
	(insert_info_to_tree), (update_info), (get_info):
	* src/proctable.h: Merged David Malcolm  <david@davemalcolm.demon.co.uk>
	SELinux Security Context patch. Thanks :)
	New configure option: --enable-selinux

2004-11-13  Benoît Dejean  <tazforever@dlfp.org>

	* configure.in: Bumped version.

2004-11-12  Benoît Dejean  <tazforever@dlfp.org>

	* src/util.c: (get_size_string):
	* src/util.h: Removed and replace by gnome_vfs_file_size...