@@ -1,5 +1,11 @@
 2004-11-24  Benoît Dejean  <tazforever@dlfp.org>
 
+	* src/interface.c: (toggle_infoview): Fixed (More|Less) labels.
+	
+	* src/procman.c: Added missing #include for old libgtop.
+
+2004-11-24  Benoît Dejean  <tazforever@dlfp.org>
+
 	* src/favorites.c: (add_single_to_blacklist):
 	* src/prettytable.c: (new_application):
 	* src/proctable.c: (proctable_free_info), (get_process_status),
